[gd_scene load_steps=9 format=3 uid="uid://dqy5lv33sy5r7"]

[ext_resource type="Script" path="res://src/ui_elements/path_field.gd" id="1_enb3p"]
[ext_resource type="Script" path="res://src/ui_elements/BetterLineEdit.gd" id="2_iwuws"]
[ext_resource type="Texture2D" uid="uid://eif2ioi0mw17" path="res://visual/icons/Plus.svg" id="3_cdafs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4rmxx"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.0666667)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wqlhg"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color(0.501961, 0.752941, 1, 0.2)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lcnxl"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4yine"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(1, 1, 1, 0.0666667)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kmpxk"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(1, 1, 1, 0.2)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="PathField" type="VBoxContainer"]
offset_right = 332.0
offset_bottom = 26.0
size_flags_horizontal = 3
theme_override_constants/separation = 2
script = ExtResource("1_enb3p")

[node name="MainLine" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
theme_override_constants/separation = 0

[node name="LineEdit" type="LineEdit" parent="MainLine"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
tooltip_text = "d"
focus_mode = 1
context_menu_enabled = false
select_all_on_focus = true
caret_blink = true
script = ExtResource("2_iwuws")
hover_stylebox = SubResource("StyleBoxFlat_4rmxx")
focus_stylebox = SubResource("StyleBoxFlat_wqlhg")

[node name="Commands" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(336, 0)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 0
theme_override_constants/separation = 0

[node name="AddMove" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_lcnxl")
theme_override_styles/hover = SubResource("StyleBoxFlat_4yine")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kmpxk")
icon = ExtResource("3_cdafs")

[connection signal="text_submitted" from="MainLine/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="AddMove" to="." method="_on_add_move_pressed"]
